[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/rhiutils/_version.py"


[project]
name = "rhiutils"
authors = [
  { name="Rhiannon Udall", email="rhiannon.udall@ligo.org" },
]
description = "A package for enabling CBC analyses"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "rhiutils._version.__version__"}

[project.urls]
"Homepage" = "https://github.com/Rhiannon-Udall/RhiannonsUtils"
"Bug Tracker" = "https://github.com/Rhiannon-Udall/RhiannonsUtils/-/issues"
