[rhiannonutils]
name = rhiannonutils
version = 0.1.0
author = Rhiannon Udall
author_email = rhiannon.udall@ligo.org
description = A library of utility scripts / source
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ligo.org/rhiannon.udall/rhiannonutils/
project_urls =
    Bug Tracker = https://git.ligo.org/rhiannon.udall/rhiannonutils/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
    bilby
    configargparse

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rift_corner_plot = rhiutils:rift_corner_plot
    make_header_block = rhiutils:make_header_block
    

[flake8]
exclude = .git,docs,build,dist,test,*__init__.py,*_version.py, versioneer.py
max-line-length = 120
ignore = E129 W504 W503 E203

[tool:pytest]
addopts = -p no:warnings

